--- a/notebooks/LTSM.ipynb
+++ b/notebooks/LTSM.ipynb
@@ -7,7 +7,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from torch.autograd import Variable\n",
+    "from sklearn.preprocessing import MinMaxScaler"
    ]
   },
   {
@@ -115,6 +119,66 @@
     "    @staticmethod\n",
     "    def sigmoid(x):\n",
     "        return 1. / (1 + np.exp(-x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6426360f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sliding_windows(data, seq_length):\n",
+    "    x = []\n",
+    "    y = []\n",
+    "\n",
+    "    for i in range(len(data)-seq_length-1):\n",
+    "        _x = data[i:(i+seq_length)]\n",
+    "        _y = data[i+seq_length]\n",
+    "        x.append(_x)\n",
+    "        y.append(_y)\n",
+    "\n",
+    "    return np.array(x),np.array(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24875217",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LSTM(nn.Module):\n",
+    "\n",
+    "    def __init__(self, num_classes, input_size, hidden_size, num_layers):\n",
+    "        super(LSTM, self).__init__()\n",
+    "        \n",
+    "        self.num_classes = num_classes\n",
+    "        self.num_layers = num_layers\n",
+    "        self.input_size = input_size\n",
+    "        self.hidden_size = hidden_size\n",
+    "        self.seq_length = seq_length\n",
+    "        \n",
+    "        self.lstm = nn.LSTM(input_size=input_size, hidden_size=hidden_size,\n",
+    "                            num_layers=num_layers, batch_first=True)\n",
+    "        \n",
+    "        self.fc = nn.Linear(hidden_size, num_classes)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        h_0 = Variable(torch.zeros(\n",
+    "            self.num_layers, x.size(0), self.hidden_size))\n",
+    "        \n",
+    "        c_0 = Variable(torch.zeros(\n",
+    "            self.num_layers, x.size(0), self.hidden_size))\n",
+    "        \n",
+    "        # Propagate input through LSTM\n",
+    "        ula, (h_out, _) = self.lstm(x, (h_0, c_0))\n",
+    "        \n",
+    "        h_out = h_out.view(-1, self.hidden_size)\n",
+    "        \n",
+    "        out = self.fc(h_out)\n",
+    "        \n",
+    "        return out"
    ]
   }
  ],
